--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,8 @@
 @import 'base/base';
 
 @import 'layout/grid';
+@import 'layout/flex';
+@import 'layout/forms';
 
 @import 'components/listcard';
 @import 'components/card';
