--- a/src/scss/layout/_flex.scss
+++ b/src/scss/layout/_flex.scss
@@ -1,4 +1,9 @@
 .flex {
   display: flex;
-  
+  justify-content: var(--justify, flex-start);
+  align-items: var(--align, center);
+
+  & > *:not(:last-of-type) {
+    margin-right: var(--gap-flex, 20px);
+  }
 }
