--- a/src/scss/layout/_flex.scss
+++ b/src/scss/layout/_flex.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: var(--justify, flex-start);
   align-items: var(--align, center);
+  flex-direction: var(--direction);
 
   & > *:not(:last-of-type) {
     margin-right: var(--gap-flex, 20px);
