--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,14 @@
-@import 'base/typography';
-@import 'base/reset';
-@import 'base/base';
+@import "base/typography";
+@import "base/reset";
+@import "base/base";
 
-@import 'layout/grid';
-@import 'layout/flex';
-@import 'layout/forms';
+@import "layout/grid";
+@import "layout/flex";
+@import "layout/forms";
 
-@import 'components/listcard';
-@import 'components/card';
-@import 'components/plans';
-@import 'components/buttons';
+@import "components/listcard";
+@import "components/card";
+@import "components/plans";
+@import "components/buttons";
+@import "components/modal";
+@import "components/accordion";
